Fix build and workflows. Also prep for flt16.