@@ -214,6 +214,7 @@ JVM_ARGS=(
     "--add-opens" "java.base/java.time.format=ALL-UNNAMED"
     "--add-opens" "java.base/java.util=ALL-UNNAMED"
     "--enable-native-access=jarhdf5"
+    "--enable-native-access=jarhdf"
     "-Djava.library.path=$hdf5_lib_dir:$hdf_lib_dir"
 )
 
